# sim2val

./: .gitattributes  .pre-commit-config.yaml  LICENSE.txt  README.md  index.html  pyproject.toml
docs/: index.html
notebooks/: livestream_notebook.ipynb  nuplan_sketch.py  quadruped.py  simple_run.ipynb
src/sim2val/: __init__.py  control_variates.py
testdata/nuplan/: only_sim.parquet  paired_sim.parquet  real.parquet
testdata/quadruped/: only_sim.parquet  paired_sim.parquet  real.parquet
tests/: test_control_variates.py
